[gd_scene load_steps=11 format=3 uid="uid://c2p86ftro03fc"]

[ext_resource type="Script" path="res://levels/level_base.gd" id="1_t3pg3"]
[ext_resource type="TileSet" uid="uid://dhxw3f8l2saqn" path="res://assets/tilesets/tiles_world.tres" id="2_3sb2m"]
[ext_resource type="Texture2D" uid="uid://cokbnb78vwro2" path="res://assets/environment/back.png" id="2_h6kbk"]
[ext_resource type="Texture2D" uid="uid://dqhi6jt116j3y" path="res://assets/environment/middle.png" id="3_ajj46"]
[ext_resource type="TileSet" uid="uid://dn505hopwb4de" path="res://assets/tilesets/tiles_items.tres" id="3_i6fom"]
[ext_resource type="TileSet" uid="uid://blhd0ogpuydej" path="res://assets/tilesets/tiles_spikes.tres" id="4_7rd4n"]
[ext_resource type="PackedScene" uid="uid://p4ysfuwsfe8i" path="res://actors/player.tscn" id="5_chgkv"]
[ext_resource type="PackedScene" uid="uid://ba2l2pxd1b73" path="res://ui/hud.tscn" id="8_kab1q"]
[ext_resource type="AudioStream" uid="uid://n7iiats51kjv" path="res://assets/audio/pickup2.ogg" id="9_jg4ff"]
[ext_resource type="AudioStream" uid="uid://dswdyphoa7jfk" path="res://assets/audio/Grasslands Theme.ogg" id="10_mlloc"]

[node name="LevelBase" type="Node2D"]
script = ExtResource("1_t3pg3")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.2, 1)
motion_mirroring = Vector2(576, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2(2.05208, 2.71667)
texture = ExtResource("2_h6kbk")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.6, 1)
motion_mirroring = Vector2(880, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
texture_repeat = 3
position = Vector2(437, 631)
texture = ExtResource("3_ajj46")
region_enabled = true
region_rect = Rect2(0, 0, 880, 368)

[node name="World" type="TileMap" parent="."]
tile_set = ExtResource("2_3sb2m")
format = 2

[node name="Items" type="TileMap" parent="."]
tile_set = ExtResource("3_i6fom")
format = 2

[node name="Danger" type="TileMap" parent="." groups=["danger"]]
tile_set = ExtResource("4_7rd4n")
format = 2

[node name="Player" parent="." instance=ExtResource("5_chgkv")]

[node name="SpawnPoint" type="Marker2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource("8_kab1q")]

[node name="PickupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_jg4ff")

[node name="PlayingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_mlloc")
autoplay = true

[node name="Ladders" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[connection signal="score_changed" from="." to="CanvasLayer/HUD" method="update_score"]
[connection signal="died" from="Player" to="." method="_on_player_died"]
[connection signal="life_changed" from="Player" to="CanvasLayer/HUD" method="update_life"]
[connection signal="body_entered" from="Ladders" to="." method="_on_ladders_body_entered"]
[connection signal="body_exited" from="Ladders" to="." method="_on_ladders_body_exited"]
